--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
 - psql -c 'create database travis_ci_test;' -U postgres
 script:
 - bundle exec rails db:migrate RAILS_ENV=test
+- bundle exec rspec
 deploy:
   provider: heroku
   run: rake db:migrate
